--- a/src/www/index.html
+++ b/src/www/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head lang="en">
     <meta charset="UTF-8">
     <title>react-bootstrap-starter</title>
@@ -13,7 +14,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
 </head>
+
 <body>
-<script src="app.js"></script>
+    <div id="react-target" />
+    <script src="app.js"></script>
 </body>
+
 </html>
